--- a/app/src/main/res/layout/activity_play_music.xml
+++ b/app/src/main/res/layout/activity_play_music.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/custom_screen"
     android:orientation="vertical"
     android:weightSum="10"
@@ -20,15 +20,23 @@
         android:id="@+id/viewPagerPlayNhac"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="7.5">
+        android:layout_weight="7.5" />
 
-    </androidx.viewpager.widget.ViewPager>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabBackground="@drawable/tab_selector"
+        app:tabGravity="center"
+        app:tabIndicatorHeight="0dp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2.5"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,121 +73,124 @@
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
 
             <ImageButton
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_gravity="center_vertical|start"
                 android:id="@+id/btn_random"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
+                android:layout_gravity="center_vertical|start"
                 android:background="@android:color/transparent"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_random"
-                android:tint="@android:color/white" />
+                android:tint="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btn_random"
-                app:layout_constraintEnd_toStartOf="@id/btn_play"
                 android:id="@+id/btn_back"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitXY"
                 android:src="@drawable/iconpreview"
-                android:layout_marginEnd="15dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/btn_play"
+                app:layout_constraintStart_toEndOf="@id/btn_random"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintEnd_toStartOf="parent"
                 android:id="@+id/btn_play"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
                 android:background="@android:color/transparent"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_play_music"
                 android:tint="@android:color/white"
-                android:layout_marginEnd="15dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/btn_play"
-                app:layout_constraintEnd_toStartOf="@id/btn_lapLai"
                 android:id="@+id/btn_next"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitXY"
                 android:src="@drawable/iconnext"
-                android:layout_marginEnd="15dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/btn_lapLai"
+                app:layout_constraintStart_toEndOf="@id/btn_play"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:id="@+id/btn_lapLai"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_repeat"
                 android:tint="@android:color/white"
-                android:layout_marginEnd="15dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <RelativeLayout
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
 
-            <ImageView
-                android:layout_marginLeft="10dp"
-                android:src="@drawable/ic_favorite"
-                android:tint="@android:color/white"
+            <CheckBox
+                android:id="@+id/imgFavorite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_alignParentStart="true" />
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/bg_state_favorite_1"
+                android:button="@null"
+                android:checked="false" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center_vertical|end"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true">
+                android:layout_gravity="center_vertical|end"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:text="Danh sách phát"
+                    android:id="@+id/tvPlayMusic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
                     android:drawableEnd="@drawable/ic_list_music"
+                    android:drawableRight="@drawable/ic_list_music"
                     android:drawablePadding="10dp"
                     android:drawableTint="@android:color/white"
-                    android:drawableRight="@drawable/ic_list_music" />
+                    android:text="Danh sách phát"
+                    android:textColor="@android:color/white" />
 
             </LinearLayout>
 
