--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -1,79 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:weightSum="6">
+    android:layout_width="match_parent"
+    android:layout_height="70dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_weight="1.5"
-        android:layout_gravity="center"
-        android:id="@+id/imgMusic"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        app:civ_border_color="@android:color/white"
-        app:civ_border_width="1dp"/>
+    <RelativeLayout
+        android:id="@+id/rlShowMusic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgMusic"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            app:civ_border_color="@android:color/white"
+            app:civ_border_width="1dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_toEndOf="@id/imgMusic"
+            android:layout_toRightOf="@id/imgMusic"
+            android:orientation="vertical"
+            android:weightSum="2">
+
+            <TextView
+                android:layout_gravity="center_vertical|start"
+                android:maxWidth="200dp"
+                android:id="@+id/sheet_tenbaihat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:gravity="center"
+                android:text="Ten bai hat"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_gravity="start|center_vertical"
+                android:id="@+id/sheet_casi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Ca si"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <LinearLayout
-        android:layout_marginLeft="5dp"
-        android:layout_weight="3"
+        android:id="@+id/lnPlayMusic"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="2">
-
-        <TextView
-            android:id="@+id/sheet_tenbaihat"
-            android:textColor="@android:color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ten bai hat"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:layout_weight="1"
-            />
-
-        <TextView
-            android:id="@+id/sheet_casi"
-            android:textColor="@android:color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ca si"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_weight="1.5"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center_vertical|end"
         android:orientation="horizontal">
 
-        <ImageView
+        <CheckBox
             android:id="@+id/sheet_fravorite"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_favorite"
-            android:layout_width="wrap_content"
-            android:tint="@android:color/black"
-            android:layout_height="wrap_content"/>
+            android:background="@drawable/bg_state_favorite"
+            android:button="@null"
+            android:checked="false"
+            android:tint="@android:color/black" />
+
         <ImageView
             android:id="@+id/sheet_playstate"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_play"
-            android:tint="@android:color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:tint="@android:color/black" />
+
         <ImageView
             android:id="@+id/sheet_next"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
-            android:tint="@android:color/black"
             android:src="@drawable/ic_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:tint="@android:color/black" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
