--- a/app/src/main/res/layout/fragment_cd_music.xml
+++ b/app/src/main/res/layout/fragment_cd_music.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-<de.hdodenhof.circleimageview.CircleImageView
-    app:civ_border_color="#000"
-    android:id="@+id/img_circle"
-    app:civ_border_width="2dp"
-    android:src="@mipmap/ic_launcher"
-    android:layout_centerInParent="true"
-    android:layout_width="350dp"
-    android:layout_height="350dp" />
+    android:layout_height="match_parent">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/img_circle"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
+        android:layout_centerInParent="true"
+        android:src="@mipmap/ic_launcher"
+        app:civ_border_color="#000"
+        app:civ_border_width="2dp" />
+
 </RelativeLayout>
