--- a/app/src/main/res/layout/fragment_mv.xml
+++ b/app/src/main/res/layout/fragment_mv.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -17,22 +16,22 @@
         app:mt_backIconTint="@android:color/black"
         app:mt_hint="Nhập từ khóa cần tìm"
         app:mt_hintColor="@android:color/black"
-        app:mt_textColor="@android:color/black"
         app:mt_maxSuggestionsCount="5"
         app:mt_placeholder="Nhập bài hát cần tìm"
         app:mt_roundedSearchBarEnabled="true"
         app:mt_searchIconDrawable="@drawable/ic_search"
         app:mt_searchIconTint="@android:color/black"
-        app:mt_speechMode="true" />
+        app:mt_speechMode="true"
+        app:mt_textColor="@android:color/black" />
 
-      <androidx.recyclerview.widget.RecyclerView
-          android:id="@+id/recycler_mv"
-          android:layout_width="match_parent"
-          android:layout_height="0dp"
-          android:layout_marginTop="10dp"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/search_mv"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_mv"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_mv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
