--- a/app/src/main/res/layout/fragment_trang_chu.xml
+++ b/app/src/main/res/layout/fragment_trang_chu.xml
@@ -1,83 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+<FrameLayout android:fillViewport="true"
     android:layout_height="match_parent"
-    android:id="@+id/refresh">
+    android:layout_width="match_parent"
+    android:scrollbars="none"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <androidx.core.widget.NestedScrollView
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:scrollbars="none">
+        android:layout_width="match_parent">
 
-        <androidx.core.widget.NestedScrollView
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="match_parent"
+            <com.mancj.materialsearchbar.MaterialSearchBar
+                style="@style/MaterialSearchBarLight"
+                android:id="@+id/search_music"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_margin="5dp"
+                android:layout_width="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:mt_backIconDrawable="@drawable/ic_baseline_arrow_back_24"
+                app:mt_backIconTint="@android:color/black"
+                app:mt_hint="Nhập bài hát cần tìm"
+                app:mt_hintColor="@android:color/black"
+                app:mt_maxSuggestionsCount="5"
+                app:mt_placeholder="Nhập bài hát cần tìm"
+                app:mt_roundedSearchBarEnabled="true"
+                app:mt_searchIconDrawable="@drawable/ic_search"
+                app:mt_searchIconTint="@android:color/black"
+                app:mt_speechMode="true"
+                app:mt_textColor="@android:color/black" />
 
-                <com.mancj.materialsearchbar.MaterialSearchBar
-                    android:id="@+id/search_music"
-                    style="@style/MaterialSearchBarLight"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:mt_backIconDrawable="@drawable/ic_baseline_arrow_back_24"
-                    app:mt_backIconTint="@android:color/black"
-                    app:mt_hint="Nhập bài hát cần tìm"
-                    app:mt_hintColor="@android:color/black"
-                    app:mt_maxSuggestionsCount="5"
-                    app:mt_placeholder="Nhập bài hát cần tìm"
-                    app:mt_roundedSearchBarEnabled="true"
-                    app:mt_searchIconDrawable="@drawable/ic_search"
-                    app:mt_searchIconTint="@android:color/black"
-                    app:mt_speechMode="true"
-                    app:mt_textColor="@android:color/black" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerViewSearch"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewSearch"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:visibility="gone" />
 
 
-                <fragment
-                    android:id="@+id/fragmentQuangCao"
-                    android:name="com.trantri.tdt_music.Fragment.Fragment_QuangCao"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+            <fragment
+                android:id="@+id/fragmentQuangCao"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:name="com.trantri.tdt_music.Fragment.Fragment_QuangCao" />
 
-                <fragment
-                    android:id="@+id/fragmentPlaylist"
-                    android:name="com.trantri.tdt_music.Fragment.FragmentPlaylist"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+            <fragment
+                android:id="@+id/fragmentPlaylist"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:name="com.trantri.tdt_music.Fragment.FragmentPlaylist" />
 
-                <fragment
-                    android:id="@+id/fragmentChuDeTheLoai"
-                    android:name="com.trantri.tdt_music.Fragment.FragmentChuDeThLoai"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+            <fragment
+                android:id="@+id/fragmentChuDeTheLoai"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:name="com.trantri.tdt_music.Fragment.FragmentChuDeThLoai" />
 
-                <fragment
-                    android:id="@+id/fragmentAlbum"
-                    android:name="com.trantri.tdt_music.Fragment.FragmentAlbum"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+            <fragment
+                android:id="@+id/fragmentAlbum"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:name="com.trantri.tdt_music.Fragment.FragmentAlbum" />
 
-                <fragment
-                    android:id="@+id/fragmentBaiHatYeuThich"
-                    android:name="com.trantri.tdt_music.Fragment.FragmentBaiHat"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
-    </FrameLayout>
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            <fragment
+                android:id="@+id/fragmentBaiHatYeuThich"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:name="com.trantri.tdt_music.Fragment.FragmentBaiHat" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+</FrameLayout>
