--- a/app/src/main/res/layout/activity_danh_sach_the_loai_theo_chu_de.xml
+++ b/app/src/main/res/layout/activity_danh_sach_the_loai_theo_chu_de.xml
@@ -9,14 +9,10 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbarTheoChuDe"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-
-    </androidx.appcompat.widget.Toolbar>
+        android:layout_height="?attr/actionBarSize" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myRecycleTheoChuDe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="match_parent" />
 </LinearLayout>
