--- a/app/src/main/res/layout/fragment_chude_theloai.xml
+++ b/app/src/main/res/layout/fragment_chude_theloai.xml
@@ -18,7 +18,8 @@
             android:drawableTint="@android:color/black"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:drawableEnd="@drawable/ic_more" />
     </RelativeLayout>
 
     <HorizontalScrollView
