--- a/app/src/main/res/layout/fragment_tim_kiem.xml
+++ b/app/src/main/res/layout/fragment_tim_kiem.xml
@@ -2,31 +2,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<com.google.android.material.appbar.AppBarLayout
-    android:id="@+id/appbarLayoutTimKiem"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-<androidx.appcompat.widget.Toolbar
-    android:id="@+id/toolbartimkiembaihat"
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize">
 
-</androidx.appcompat.widget.Toolbar>
-</com.google.android.material.appbar.AppBarLayout>
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbarLayoutTimKiem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbartimkiembaihat"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize" />
+    </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@id/appbarLayoutTimKiem"
         android:id="@+id/recycleviewTimKiem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </androidx.recyclerview.widget.RecyclerView>
-    <TextView
+        android:layout_height="match_parent"
+        android:layout_below="@id/appbarLayoutTimKiem" />
 
-        android:visibility="gone"
-        android:textColor="#ff002f"
+    <TextView
+        android:id="@+id/tv_DataNull"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:text="Bài Hát Hiện Tại Chưa Có"
-        android:id="@+id/tv_DataNull"
+        android:textColor="#ff002f"
         android:textSize="35sp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:visibility="gone" />
 </RelativeLayout>
