--- a/app/src/main/res/layout/activity_danh_sach_all_album.xml
+++ b/app/src/main/res/layout/activity_danh_sach_all_album.xml
@@ -9,9 +9,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarAllAlbum"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-
-    </androidx.appcompat.widget.Toolbar>
+        android:layout_height="?attr/actionBarSize"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleAllAlbum"
