--- a/app/src/main/res/layout/fragment_bai_hat_yeuthich.xml
+++ b/app/src/main/res/layout/fragment_bai_hat_yeuthich.xml
@@ -4,27 +4,25 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:padding="7dp"
         android:id="@+id/relativeBaiHatYeuThich"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="7dp">
 
         <TextView
-            android:textSize="20sp"
-            android:textColor="@android:color/black"
-            android:textStyle="bold"
-            android:text="Có Thể Bạn Thích "
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Có Thể Bạn Thích "
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/relativeBaiHatYeuThich"
         android:id="@+id/myRecycleBaiHatYeuThich"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/relativeBaiHatYeuThich"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
 </RelativeLayout>
