--- a/app/src/main/res/layout/fragment_play_danh_sach_bai_hat.xml
+++ b/app/src/main/res/layout/fragment_play_danh_sach_bai_hat.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recyclePlayDanhSachBH"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</androidx.recyclerview.widget.RecyclerView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclePlayDanhSachBH"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
