--- a/app/src/main/res/layout/item_my_video.xml
+++ b/app/src/main/res/layout/item_my_video.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <WebView
         android:id="@+id/myWebViewVideoView"
         android:layout_width="match_parent"
-        android:layout_height="180dp">
-
-    </WebView>
+        android:layout_height="180dp" />
 
 </LinearLayout>
