--- a/app/src/main/res/layout/item_quangcao.xml
+++ b/app/src/main/res/layout/item_quangcao.xml
@@ -40,14 +40,16 @@
             android:text="Bùa Yêu"
             android:textColor="#FFFF"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_toEndOf="@+id/img_QC" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_titleBanner"
             android:layout_marginTop="3dp"
-            android:layout_toRightOf="@+id/img_QC">
+            android:layout_toRightOf="@+id/img_QC"
+            android:layout_toEndOf="@+id/img_QC">
 
             <TextView
                 android:id="@+id/tv_mieutaBH"
@@ -58,7 +60,8 @@
                 android:text="Những Ca Khúc Mới Ra Mắt Của Các Ca Sĩ Nổi Tiếng Hiện Nay"
                 android:textColor="#FFFF"
                 android:textSize="13sp"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold|italic"
+                android:layout_marginEnd="40dp" />
         </RelativeLayout>
     </RelativeLayout>
 
