--- a/app/src/main/res/layout/notify_play_music.xml
+++ b/app/src/main/res/layout/notify_play_music.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:weightSum="4">
@@ -8,29 +8,27 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_gravity="start|center_vertical"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        android:orientation="vertical">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:singleLine="true"
             android:ellipsize="end"
             android:gravity="start|center_vertical"
-            android:text="Khi Tình Yêu Bắt Đầu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:singleLine="true"
+            android:text="Khi Tình Yêu Bắt Đầu" />
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:ellipsize="end"
             android:gravity="center"
             android:singleLine="true"
-            android:ellipsize="end"
-            android:text="Hà Anh Tuấn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-
+            android:text="Hà Anh Tuấn" />
 
     </LinearLayout>
 
@@ -38,28 +36,27 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical|end"
+        android:layout_weight="2"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:layout_weight="2">
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_previous"
-            android:tint="@android:color/black"
-            />
+            android:tint="@android:color/black" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_play"
-            android:tint="@android:color/black"
-            />
+            android:tint="@android:color/black" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/ic_next"
-            android:tint="@android:color/black"
-            />
+            android:tint="@android:color/black" />
 
     </LinearLayout>
 
