--- a/app/src/main/res/layout/activity_songs_list.xml
+++ b/app/src/main/res/layout/activity_songs_list.xml
@@ -68,6 +68,6 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycleDanhSachBH"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="wrap_content" />
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
